--- a/sky-server/src/main/resources/application-dev.yml
+++ b/sky-server/src/main/resources/application-dev.yml
@@ -6,3 +6,8 @@ sky:
     database: sky_take_out
     username: root
     password: 1234
+  alioss:
+    endpoint: oss-cn-beijing.aliyuncs.com
+    access-key-id: LTAI5tCTjSbvRtL2oyMiQpTx
+    access-key-secret: 9EGvIm1IXbMOPQbN8mPlBt2YMtYDow
+    bucket-name: chen-itdiary
