--- a/sky-server/src/main/resources/application-dev.yml
+++ b/sky-server/src/main/resources/application-dev.yml
@@ -7,8 +7,9 @@ sky:
     username: root
     password: 1234
 
+
   alioss:
-    endpoint: oss-cn-beijing.aliyuncs.com
-    access-key-id: LTAI5tCTjSbvRtL2oyMiQpTx
-    access-key-secret: 9EGvIm1IXbMOPQbN8mPlBt2YMtYDow
-    bucket-name: chen-itdiary
+    endpoint:
+    access-key-id:
+    access-key-secret:
+    bucket-name:
