--- a/sky-server/src/main/resources/application-dev.yml
+++ b/sky-server/src/main/resources/application-dev.yml
@@ -6,6 +6,16 @@ sky:
     database: sky_take_out
     username: root
     password: 1234
+  alioss:
+    endpoint:
+    access-key-id:
+    access-key-secret:
+    bucket-name:
+  redis:
+    host: localhost
+    port: 6379
+    password: 123456
+    database: 10
 
 
 
